Update the scripts so that they are not overriding the java.ext.dirs directory.
git-svn-id: https://svn.apache.org/repos/asf/avalon/trunk@19708 13f79535-47bb-0310-9956-ffa450edef68