@@ -26,7 +26,7 @@ echo "        Bootstrap JAR: $MERLIN_BOOTSTRAP_JAR"
 echo "     Merlin Arguments: $MERLIN_ARGS $@"
 echo ""
 
-ARGS="$MERLIN_JVM_OPTS \"-Djava.security.policy=$MERLIN_HOME/bin/security.policy\" \"-Djava.ext.dirs=$MERLIN_HOME/ext\" -jar \"$MERLIN_BOOTSTRAP_JAR\" $MERLIN_ARGS \"$@\""
+ARGS="$MERLIN_JVM_OPTS \"-Djava.security.policy=$MERLIN_HOME/bin/security.policy\" -jar \"$MERLIN_BOOTSTRAP_JAR\" $MERLIN_ARGS \"$@\""
 echo -n "$JAVA" >$MERLIN_HOME/command-line.log
 echo "$ARGS" >>$MERLIN_HOME/command-line.log
 
