@@ -51,4 +51,4 @@ echo "          JVM Options: $MERLIN_JVM_OPTS"
 echo "        Bootstrap JAR: $MERLIN_BOOTSTRAP_JAR"
 echo ""
 
-"$JAVA" $MERLIN_JVM_OPTS "-Djava.security.policy=$MERLIN_HOME/bin/security.policy" "-Djava.ext.dirs=$MERLIN_HOME/ext" -jar "$MERLIN_BOOTSTRAP_JAR" "$@"
+"$JAVA" $MERLIN_JVM_OPTS "-Djava.security.policy=$MERLIN_HOME/bin/security.policy" -jar "$MERLIN_BOOTSTRAP_JAR" "$@"
